refactor: 메서드 동일화